# hgraph

./: .gitignore  README.md  pyproject.toml
src/hgraph/core/: config.py  edge.py  hypergraph.py  node.py  registry.py  utils.py  validator.py
src/hgraph/examples/: academic_authorship.py  medical_diagnosis.py  smith_family.py  university_lab.py
