[project]
name = "hgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "John Faucett", email = "jsfaucett87@icloud.com" }]
requires-python = ">=3.11"
dependencies = ["pydantic>=2.10.6", "pydantic-settings>=2.8.1"]

[project.scripts]
hgraph = "hgraph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hgraph"]

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
]
